# bfjson

./: CMakeLists.txt
cmake/: config.h.in
examples/: .gitignore  CMakeLists.txt  selftest.c
include/: bfjson.h  export.h
include/bfjson/: json.h
src/: json.c
